[tool.poetry]
name = "squasher-py"
version = "0.1.0"
description = ""
authors = ["wappon28dev <wappon_28_dev@ruru.be>"]
readme = "README.md"
packages = [{ include = "squasher_py" }]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.7.0"
ultralytics = "^8.0.142"
imagehash = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
