[tool.poetry]
name = "squasher-py"
version = "0.1.0"
description = ""
authors = ["wappon28dev <wappon_28_dev@ruru.be>"]
readme = "README.md"
packages = [{ include = "squasher_py" }]

[tool.poetry.dependencies]
python = "3.11.2"
black = "^23.7.0"
ultralytics = "^8.0.142"
imagehash = "^4.3.1"
pyqtgraph = "^0.13.3"
pyside6 = "^6.5.2"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"
bardapi = "0.1.33"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
